# external_xz

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lookaside.txt
resources/xz_cmake/: CMakeLists.txt
resources/xz_include/: config.h
test/: CMakeLists.txt  xz_test.cpp
